# 2DTriangleCounting

./: CMakeLists.txt  Makefile  README.md  cmdline.c  defs.h  io.c  main.c  mpi_tc.c  mrg_transitions.c  proto.h  splittable_mrg.c  splittable_mrg.h  struct.h  tc.h
GKlib/: GKlibSystem.cmake  gk_struct.h  graph.c
GKlib/conf/.svn/: all-wcprops  dir-prop-base  entries
GKlib/scripts/.svn/: all-wcprops  entries
GKlib/test/.svn/: all-wcprops  entries
data/: small-graph.metis
